--- a/index.css
+++ b/index.css
@@ -15,6 +15,7 @@ h2{
     flex-wrap: nowrap;
     flex-direction: row;
     text-align: center;
+    justify-content: space-evenly;
     border: 2px solid black;
     background-color: dodgerblue;
 }
